# am_randomize_file

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac  configure.ac.in  create_project.sh  create_version.sh  project.txt  run_me_once.sh  translate.sh  translate.sh.in
po/: Makefile.am  Makefile.in.old  am_randomize_file.po  am_randomize_file.po.old  am_randomize_file_de.po  am_randomize_file_de.po.old  am_randomize_file_en.po  am_randomize_file_en.po.old
po/de/LC_MESSAGES/: am_randomize_file.mo
po/en/LC_MESSAGES/: am_randomize_file.mo
src/: Makefile.am  gettext.h  main.c  mygettext.h
translate/: am_randomize_file.po.old  am_randomize_file_de.po  am_randomize_file_en.po.old
translate/de/LC_MESSAGES/: am_randomize_file.mo
